samples/_failures_safe/1761042813_69f13b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d0c22ab3.c: In function ‘main’:
./samples/SAFE/__tmp_d0c22ab3.c:146:5: error: expected declaration or statement at end of input
  146 |     }
      |     ^
